update the bad logic in em/strong and fix the youtube video z-index on the iframe

--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -11,6 +11,7 @@
     border: 0.1rem solid $color-mercury;
     position: relative;
     background-color: $color-mine-shaft;
+    z-index: 1;
 }
 
 .header__name {
